# sphinx-remove-toctrees

./: README.md  noxfile.py  pyproject.toml  setup.py
.github/workflows/: tests.yml
docs/: conf.py  index.md
docs/second/: second_page.md
docs/second/nested/: nested_page_hidden.md
sphinx_remove_toctree/: __init__.py
sphinx_remove_toctree/tests/: test_build.py
sphinx_remove_toctree/tests/site/: conf.py  index.md  second.md
sphinx_remove_toctree/tests/site/nested/: nested_page_shown.md
sphinx_remove_toctree/tests/site/second/: direct_link_page.md  hidden_children.md  show_children.md
sphinx_remove_toctrees/: __init__.py
sphinx_remove_toctrees/tests/: test_build.py
sphinx_remove_toctrees/tests/site/: conf.py  index.md
sphinx_remove_toctrees/tests/site/nested_hidden/: nested_page_hidden.md
