[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinx-remove-toctrees"
dynamic = ["version"]
description = "Reduce your documentation build size by selectively removing toctrees from pages."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Executable Book Project" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

]
dependencies = [
    "sphinx>=5",
]

[project.optional-dependencies]
code_style = [
    "pre-commit>=2.12",
]
docs = [
    "ipython",
    "myst-parser",
    "sphinx-book-theme",
]
tests = [
    "ipython",
    "myst-parser",
    "pytest",
    "sphinx-book-theme",
]

[project.urls]
Homepage = "https://github.com/executablebooks/sphinx-remove-toctrees"

[tool.hatch.version]
path = "sphinx_remove_toctrees/__init__.py"

[tool.hatch.build.targets.wheel]
exclude = [
  "/sphinx_remove_toctrees/tests/*"
]
